--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
+
+    <!------------- Navigation Bar ------------->
  <nav>
      <a href="./index.html"><img class="logo" src="./assets/logo ozweego blanc.png" alt="logo" width=150px></a>
      
@@ -23,13 +25,18 @@
      <a href="#"><img class="bag" src="./assets/shopping-bag.png" alt="bag" width=22px></a>
     </div>
  </nav>
+
+ <!------------- Video Running ------------->
  <div class="videodescrip"><h3>RUNNING<br>with adidas</h1>
     <br></div>
     <div class="button"><button class="explore"><a href="#">Explore</a></button></div>
-<video width=100% autoplay loop id="myvideo">
-    <source src="./assets/video.mp4" type="video/mp4">
-</video>
+    <video autoplay loop id="myvideo">
+        <source src="./assets/video.mp4" type="video/mp4">
+    </video>
 <!-- <img width=100% class="headerimg"src="./assets/pexels-thai-tran-3929035.jpg" alt=""> -->
+
+<!------------- Article du moment ------------->
+
 <h2 class="article1">ARTICLE DU MOMENT</h2>
 <div class="items">
     <div class="items1">
@@ -49,9 +56,23 @@
 <img class="newcollection" src="./assets/pexels-thai-tran-3929035.jpg" alt="newcollection" width="100%">
 
 <div class="nike">
-    <img src="./assets/veste-sportswear-heritage-windrunner-pour-HnfNX8.jpg" alt="vestenike" width="556px" height="695px">
-    <img src="./assets/sweat-a-capuche-nike.jpg" alt="capuchenike" width="556px" height="695px">
-    <img src="./assets/parka-sportswear.jpg" alt="parkanike" width="556px" height="695px">
+    <img src="./assets/veste-sportswear-heritage-windrunner-pour-HnfNX8.jpg" alt="vestenike" width="300px" height="450px">
+    <img src="./assets/sweat-a-capuche-nike.jpg" alt="capuchenike" width="300px" height="450px">
+    <img src="./assets/parka-sportswear.jpg" alt="parkanike" width="300px" height="450px">
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="ready">
+    <iframe width="660" height="415" src="https://www.youtube.com/embed/V_ozu_7Xweg" frameborder="0" autoplay allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+    <div class="rfs"><h3>READY FOR SPORT</h3><p>AFFRONTE TES PEURS ET SAISIS CHAQUE OPPORTUNITÉ QUI S'OFFRE À TOI. LE SPORT EST DE RETOUR. TROUVE TON ÉQUIPEMENT ET PRÉPARE-TOI POUR CE QUI T'ATTEND.</p></div>
 </div>
 <br>
 <br>
