--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <video autoplay loop id="myvideo">
         <source src="./assets/video.mp4" type="video/mp4">
     </video>
+    <div class="basvideo">
+    <h2>EMBELISSEZ VOS SEANCES DE RUNNING QUOTIDIENNES</h3><br><p>UNE SNEAKER FUTURISTE ÉQUIPÉE DE LA TECHNOLOGIE BOOST POUR UN CONFORT ULTIME.</p><br>
+    </div>
 <!-- <img width=100% class="headerimg"src="./assets/pexels-thai-tran-3929035.jpg" alt=""> -->
 
 <!------------- Article du moment ------------->
@@ -53,12 +56,21 @@
 </div>
 </div>
 
-<img class="newcollection" src="./assets/pexels-thai-tran-3929035.jpg" alt="newcollection" width="100%">
+<img class="newcollection" src="./assets/new nike.jpg" alt="newcollection" width="100%">
 
 <div class="nike">
-    <img src="./assets/veste-sportswear-heritage-windrunner-pour-HnfNX8.jpg" alt="vestenike" width="300px" height="450px">
-    <img src="./assets/sweat-a-capuche-nike.jpg" alt="capuchenike" width="300px" height="450px">
-    <img src="./assets/parka-sportswear.jpg" alt="parkanike" width="300px" height="450px">
+    <div class="nike1">
+    <img src="./assets/veste-sportswear-heritage-windrunner-pour-HnfNX8.jpg" alt="vestenike" width="400px" height="550px"><br>
+    120$<br>Ensemble Nike Tech
+    </div>
+    <div class="nike2">
+    <img src="./assets/sweat-a-capuche-nike.jpg" alt="capuchenike" width="400px" height="550px"><br>
+    40$<br>SweatShirt Nike SB
+    </div>
+    <div class="nike3">
+    <img src="./assets/parka-sportswear.jpg" alt="parkanike" width="400px" height="550px"><br>
+    90$ <br>Parka Nike WMNS
+</div>
 </div>
 <br>
 <br>
@@ -71,8 +83,27 @@
 <br>
 <br>
 <div class="ready">
-    <iframe width="660" height="415" src="https://www.youtube.com/embed/V_ozu_7Xweg" frameborder="0" autoplay allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
-    <div class="rfs"><h3>READY FOR SPORT</h3><p>AFFRONTE TES PEURS ET SAISIS CHAQUE OPPORTUNITÉ QUI S'OFFRE À TOI. LE SPORT EST DE RETOUR. TROUVE TON ÉQUIPEMENT ET PRÉPARE-TOI POUR CE QUI T'ATTEND.</p></div>
+    <iframe width="660" height="515" src="https://www.youtube.com/embed/V_ozu_7Xweg" frameborder="0" autoplay allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+    <div class="rfs"><br><h2>READY FOR SPORT</h3><br><p>AFFRONTE TES PEURS ET SAISIS CHAQUE OPPORTUNITÉ QUI S'OFFRE À TOI. LE SPORT EST DE RETOUR. TROUVE TON ÉQUIPEMENT ET PRÉPARE-TOI POUR CE QUI T'ATTEND.</p><br></div>
+</div>
+<h3 class="titremarque">LES MARQUES QUE VOUS AIMEZ</h3>
+<div class="marques">
+    <div class="nikefav">
+        <img src="./assets/nike jd.png" alt="nikefav"><br>
+        NIKE
+    </div>
+    <div class="thenorthface">
+    <img src="./assets/the north face jd.png" alt="northface"><br>
+    THE NORTH FACE
+    </div>
+    <div class="adidas">
+        <img src="./assets/adidas jd.png" alt="adidas"><br>
+        ADIDAS
+    </div>
+    <div class="FILA">
+        <img src="./assets/fila jd.png" alt="fila"><br>
+        FILA
+    </div>
 </div>
 <br>
 <br>
