--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
  
  <img class="banniere" width=100% class="headerimg" src="./assets/new nike.jpg" alt="">
  <div class="hautnike">
-    <h2>TECH PACK</h3><br><p>EQUIPEZ VOUS DE LA TECHNOLOGIE BOOST POUR UN CONFORT ULTIME.</p><br>
+    <h2 class="techpack">TECH PACK</h3><br><p>EQUIPEZ VOUS DE LA TECHNOLOGIE BOOST POUR UN CONFORT ULTIME.</p><br>
     </div>
 
 <!------------- Article du moment ------------->
