--- a/superstar.html
+++ b/superstar.html
@@ -32,6 +32,7 @@
    <div class="container">
        <img class="super-star"src="./assets/Chaussure_Superstarpage2.jpg" alt="">
     <h2 class="superstartitre">CHAUSSURE SUPERSTAR.</h2>
+    <p class="dessuperstar">Cloud White / Core Black / Cloud White</p>
 
    </div>
    <footer>
