--- a/superstar.html
+++ b/superstar.html
@@ -30,6 +30,8 @@
    </div>
     </nav>
    <div class="container">
+       <div class="forimg"></div>
+    
        <img class="super-star"src="./assets/Chaussure_Superstarpage2.jpg" alt="">
     <h2 class="superstartitre">CHAUSSURE SUPERSTAR.</h2>
     <p class="dessuperstar">Cloud White / Core Black / Cloud White</p>
